<resources>

    <!--RunActivity-->
    <string name="run_next_btn">Продолжить</string>

    <!--CategoryActivity-->
    <string name="category_title">Photo Club</string>

    <!--GuideActivity-->
    <string name="guide_back_btn">Назад</string>
    <string name="guide_forward_btn">Далее</string>
    <string name="guide_next_btn">Продолжить</string>
    <string name="guide_close_btn">Закрыть</string>

    <!--SettingsServiceActivity-->
    <string name="select_format">Выберите формат для печати:</string>
    <string name="select_type">Выберите тип бумаги:</string>
    <string name="apply_option">С полями</string>
    <string name="info_option">При включении опции, во время печати кадрировать будет оператор. </string>
    <string name="settings_in_gallery_btn">В галерею</string>

    <!--ServiceInfoActivity-->
    <string name="select_layout">Выберите макет для изготовления</string>
    <string name="non_select_layout">Макет не выбран</string>
    <string name="your_select_maquette">Вами выбран макет: %1$s</string>
    <string name="info_in_gallery_btn">В галерею</string>

    <!--GalleryActivity-->
    <string name="gallery_title">Галлерея</string>

    <!--ImageSettingCard-->
    <string name="setting_card_btn_next">Продолжить</string>

    <!--AppMenu-->
    <string name="menu_drawer_new_order">Новый заказ</string>
    <string name="menu_drawer_my_order">Мои заказы</string>
    <string name="menu_drawer_instruction">Руководство</string>

    <!--BaseRtPermissionsDelegate-->
    <string name="common_rt_permissions_rationale_light_continue">Продолжить</string>
    <string name="common_rt_permissions_rationale_light_cancel">Отмена</string>
    <string name="common_rt_permissions_rationale_hard_continue">Настройки</string>
    <string name="common_rt_permissions_rationale_hard_cancel">Отмена</string>
    <string name="storage_permission_rationale_light">Необходимо разрешение на упраление памяти устройства</string>
    <string name="storage_permission_rationale_light_hard">Приложению запрещен доступ к управлению памяти.\nДобавьте разрешение в настройках приложения</string>

    <!--Временно-->
    <string-array name="paper_type">
        <item>Глянцевая</item>
        <item>Матовая</item>
    </string-array>

</resources>
