<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:clickable="true"
    tools:ignore="KeyboardInaccessibleWidget">

    <com.facebook.drawee.view.SimpleDraweeView
        android:id="@+id/logoImage"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:background="@drawable/bg_menu_gradient"
        android:elevation="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:background="@color/appWhite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoImage">

        <com.photoprint.photoclub.ui.widget.CustomTextView
            android:id="@+id/menuItemNewOrder"
            style="@style/Widget.App.MainDrawer.MenuItem"
            android:drawableStart="@drawable/ic_new_order"
            android:text="@string/menu_drawer_new_order" />

        <com.photoprint.photoclub.ui.widget.CustomTextView
            android:id="@+id/menuItemMyOrder"
            style="@style/Widget.App.MainDrawer.MenuItem"
            android:drawableStart="@drawable/ic_my_order"
            android:text="@string/menu_drawer_my_order" />

        <com.photoprint.photoclub.ui.widget.CustomTextView
            android:id="@+id/menuItemInstruction"
            style="@style/Widget.App.MainDrawer.MenuItem"
            android:drawableStart="@drawable/ic_instruction"
            android:text="@string/menu_drawer_instruction" />

    </LinearLayout>

    <View
        android:layout_width="4dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toEndOf="@+id/linearLayout"
        app:layout_constraintTop_toTopOf="@+id/linearLayout" />

</android.support.constraint.ConstraintLayout>