<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        style="@style/Widget.App.SingleCardView"
        android:layout_width="match_parent"
        android:layout_below="@+id/toolbar"
        tools:ignore="MissingConstraints,UnknownIdInLayout">

        <com.facebook.drawee.view.SimpleDraweeView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:layout_marginEnd="2dp"
            android:layout_marginStart="2dp"
            android:layout_marginTop="2dp"
            app:actualImageScaleType="focusCrop"
            app:viewAspectRatio="2"
            tools:scr="" />

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/cardView2"
        style="@style/Widget.App.SingleCardView"
        android:layout_width="match_parent"
        android:layout_below="@+id/cardView"
        android:background="@color/appWhite">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.photoprint.photoclub.ui.widget.CustomTextView
                android:id="@+id/selectMaquette"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="68dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:text="@string/select_layout"
                android:textSize="14dp"
                tools:ignore="SpUsage"
                tools:text="@string/select_layout" />

            <ImageButton
                android:id="@+id/addMaquetteBtn"
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:layout_width="34dp"
                android:layout_height="34dp"
                android:layout_alignParentEnd="true"
                android:layout_centerInParent="true"
                android:layout_marginEnd="18dp"
                android:background="@drawable/bg_select_btn"
                android:elevation="4dp"
                android:paddingBottom="2dp"
                android:paddingEnd="4dp"
                android:paddingStart="2dp"
                android:paddingTop="2dp"
                android:src="@drawable/ic_select"
                android:tint="@color/bg_select_btn"
                tools:ignore="ContentDescription" />

            <com.photoprint.photoclub.ui.widget.CustomTextView
                android:id="@+id/valueMaquette"
                android:layout_width="wrap_content"
                android:layout_height="22dp"
                android:layout_below="@+id/selectMaquette"
                android:layout_marginBottom="6dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:gravity="bottom"
                android:text="@string/non_select_layout"
                android:textColor="@color/appLightGray"
                android:textSize="14dp"
                tools:ignore="SpUsage" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/cardView3"
        style="@style/Widget.App.SingleCardView"
        android:layout_width="match_parent"
        android:layout_below="@+id/cardView2"
        tools:ignore="MissingConstraints,UnknownIdInLayout">

        <com.photoprint.photoclub.ui.widget.CustomTextView
            android:id="@+id/serviceItemSize"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="6dp"
            android:drawablePadding="8dp"
            android:drawableStart="@drawable/ic_ruler"
            android:gravity="center_vertical"
            android:text="48(L)"
            android:textSize="14dp"
            tools:ignore="SpUsage"
            tools:text="48(L)" />

        <com.photoprint.photoclub.ui.widget.CustomTextView
            android:id="@+id/serviceAdditional"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="48dp"
            android:drawablePadding="8dp"
            android:drawableStart="@drawable/ic_like"
            android:gravity="center_vertical"
            android:text="Цвет, доставка, особенность"
            android:textSize="14dp"
            tools:ignore="SpUsage"
            tools:text="Цвет, доставка, особенность" />

        <com.photoprint.photoclub.ui.widget.CustomTextView
            android:id="@+id/serviceDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="90dp"
            android:gravity="center_vertical"
            android:text="Цвет, доставка, особенность"
            android:textSize="14dp"
            tools:ignore="SpUsage"
            tools:text="Цвет, доставка, особенность" />

    </android.support.v7.widget.CardView>

    <com.photoprint.photoclub.ui.widget.CustomButton
        android:id="@+id/nextButton"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_below="@+id/cardView3"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/bg_yellow_btn"
        android:elevation="4dp"
        android:text="@string/info_in_gallery_btn"
        android:textAllCaps="true"
        android:textSize="14dp"
        android:theme="@style/Widget.App.Button.Yellow"
        tools:ignore="SpUsage" />

</RelativeLayout>